--- a/蒼乃建設(1セクターずつ4回目)/index.html
+++ b/蒼乃建設(1セクターずつ4回目)/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--DOCTYPE宣言はこれで合ってるみたいだな。問題のpタグに対応してないhref要素はDOCTYPE宣言のミスではなく、シンプルにaタグからpタグに変えた時の消し忘れだったみたいだ -->
+<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="utf-8">
